# android-egui-webcam

./: .gitignore  Cargo.toml  README.md  build-apk.sh  build.cmd  cargo-mobile.cmd  env.sh  mobile.toml  run.cmd  run.js  run_release.cmd
src/: app.rs  camera.rs  lib.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
