[package]
name = "android-egui-webcam"
version = "0.1.0"
authors = ["Watashi <watashi@example.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "android-egui-webcam-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-dependencies = [
    "com.google.android.material:material:1.8.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[dependencies] 
log = "0.4.14"
chrono = "0.4"
pollster = "0.2"
egui = "0.22"
wgpu = "0.16"
winit = { version = "0.28", features = ["android-native-activity"] }
egui_demo_lib = "0.22"
egui-winit = { version = "0.22", default-features = false }
egui-wgpu = { version = "0.22", features = [ "winit" ] }
anyhow = "1"
image = { version = "0.24.9" }
imageproc = "0.23.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.21.1"
# ndk-sys = "0.5.0+25.2.9519653"
ndk-sys = "0.4.1+23.1.7779620"
# ndk = "0.8.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9"
